fix trix link dialog in dark mode

--- a/bullet_train-themes-light/app/assets/stylesheets/light/tailwind/dark-mode.css
+++ b/bullet_train-themes-light/app/assets/stylesheets/light/tailwind/dark-mode.css
@@ -132,6 +132,18 @@
       .trix-button:disabled::before {
         @apply opacity-25;
       }
+
+      .trix-dialog {
+        @apply bg-slate-800 border-slate-900 shadow-lg shadow-slate-900 !important;
+
+        .trix-button--dialog {
+          @apply text-white ;
+        }
+
+        .trix-input--dialog {
+          @apply bg-slate-800 dark:text-slate-300 focus:ring-primary-500 focus:border-primary-500;
+        }
+      }
     }
 
     .tribute-container {
